# Wisteria

./: .gitignore  README.md  build-exe.bat  install-tts.bat  main.py  pyproject.toml  run-app.bat
assets/: version_info.txt
backend/: api.py  config.py  images.py  llm.py  logutil.py  prompt_store.py  prompts.py  research.py  sanitize.py  server.py  tts.py  tts_worker.py  vision.py
backend/api_parts/: __init__.py  chat_api.py  gen_api.py  memory_api.py  prefs_api.py  prompts_api.py  tts_api.py
backend/memory/: __init__.py  constants.py  crypto.py  embedder.py  manager.py  store.py  summarizer.py
examples/: character.example.txt  system_prompt.example.txt
tests/: run_all.py  test_api_surface.py  test_background.py  test_chat_state.py  test_features.py  test_memory_ops_guard.py  test_memory_reliability.py  test_prompt_flow.py  test_prompt_manage.py  test_sanitize2.py  test_server_lifecycle.py  test_settings.py  test_tts_gate.py  test_vault_recovery.py
voices/: README.md
web/: app.css  app.js  index.html
